--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -14,6 +14,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    "baseUrl": ".",
+    "paths": {
+      "@pages/*": ["./src/pages/*"],
+      "@/*": ["./src/*"],
+    },
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
