[FE] - Added - Navbar and link component

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -16,6 +16,7 @@
 
     "baseUrl": ".",
     "paths": {
+      "@layout/*": ["./src/layout/*"],
       "@pages/*": ["./src/pages/*"],
       "@/*": ["./src/*"],
     },
