--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -16,6 +16,7 @@
 
     "baseUrl": ".",
     "paths": {
+      "@components/*": ["./src/components/*"],
       "@layout/*": ["./src/layout/*"],
       "@pages/*": ["./src/pages/*"],
       "@/*": ["./src/*"],
