[FE] - Added - service, User login async

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -16,6 +16,7 @@
 
     "baseUrl": ".",
     "paths": {
+      "@services/*": ["./src/services/*"],
       "@components/*": ["./src/components/*"],
       "@layout/*": ["./src/layout/*"],
       "@pages/*": ["./src/pages/*"],
