--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -12,10 +12,12 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
+    "allowJs": true,
     "jsx": "react-jsx",
 
     "baseUrl": ".",
     "paths": {
+      "@context/*": ["./src/context/*"],
       "@services/*": ["./src/services/*"],
       "@components/*": ["./src/components/*"],
       "@layout/*": ["./src/layout/*"],
