--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -17,6 +17,7 @@
 
     "baseUrl": ".",
     "paths": {
+      "@hooks/*": ["./src/hooks/*"],
       "@context/*": ["./src/context/*"],
       "@services/*": ["./src/services/*"],
       "@components/*": ["./src/components/*"],
