[FE] - Added - assets folder and hamburger icon

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -18,6 +18,7 @@
     "baseUrl": ".",
     "paths": {
       "@hooks/*": ["./src/hooks/*"],
+      "@assets/*": ["./src/assets/*"],
       "@context/*": ["./src/context/*"],
       "@services/*": ["./src/services/*"],
       "@components/*": ["./src/components/*"],
